@@ -14,7 +14,7 @@ Luke Howard retains copyright in all contributed code.
 	Michael Brownea <mbrown@fensystems.co.uk>
 	Max Caines <Max.Caines@wlv.ac.uk>
 	Peter Cherney <peterc@luddite.com.au>
-	Howard Chu <hyc@highlandsun.com>
+	Howard Chu <hyc@symas.com>
 	Ben Collins <bcollins@debian.org>
 	Stephan Cremer <scremer@dohle.com>
 	Luca Filipozzi <lucaf+nssldap@ece.ubc.ca>
